[gd_scene load_steps=12 format=3 uid="uid://htgc1vx7267l"]

[ext_resource type="Script" uid="uid://es1wuqsgw0fc" path="res://objects/skill_block.gd" id="1_skill_block"]
[ext_resource type="PackedScene" uid="uid://cs417o1y08xb1" path="res://models/brick.glb" id="2_brick_mesh"]
[ext_resource type="Material" uid="uid://booc27br2ap2l" path="res://models/colormap.tres" id="3_colormap"]
[ext_resource type="ArrayMesh" uid="uid://bkyb0o2ipxxya" path="res://meshes/brick.res" id="4_particles_mesh"]

[sub_resource type="BoxShape3D" id="BoxShape3D_block"]
size = Vector3(0.75, 0.75, 0.75)

[sub_resource type="BoxShape3D" id="BoxShape3D_detector"]
size = Vector3(0.5, 0.25, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yellow"]
albedo_color = Color(1, 0.9, 0.2, 1)

[sub_resource type="Gradient" id="Gradient_particles"]
colors = PackedColorArray(1, 0.9, 0.2, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_particles"]
gradient = SubResource("Gradient_particles")

[sub_resource type="Curve" id="Curve_particles"]
_data = [Vector2(0.0075757504, 0.8651686), 0.0, 0.018773995, 0, 0, Vector2(0.9924243, 0), -3.356592, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_particles"]
curve = SubResource("Curve_particles")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_particles"]
particle_flag_align_y = true
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 0.6
direction = Vector3(0, 10, 0)
spread = 40.0
initial_velocity_min = 4.0
initial_velocity_max = 6.0
linear_accel_min = -2.0000021
linear_accel_max = -1.0000023
scale_min = 0.29999998
scale_curve = SubResource("CurveTexture_particles")
color_ramp = SubResource("GradientTexture1D_particles")

[node name="SkillBlock" type="StaticBody3D"]
script = ExtResource("1_skill_block")
content_id = "skill_frontend"

[node name="Mesh" parent="." instance=ExtResource("2_brick_mesh")]
material_override = SubResource("StandardMaterial3D_yellow")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.375, 0)
shape = SubResource("BoxShape3D_block")

[node name="BottomDetector" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BottomDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
shape = SubResource("BoxShape3D_detector")

[node name="PopupAnchor" type="Marker3D" parent="."]
position = Vector3(0, 1.6, 0)

[node name="Particles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25192702, 0)
material_override = ExtResource("3_colormap")
emitting = false
amount = 5
one_shot = true
preprocess = 0.1
speed_scale = 1.25
explosiveness = 1.0
randomness = 1.0
fixed_fps = 60
local_coords = true
process_material = SubResource("ParticleProcessMaterial_particles")
draw_pass_1 = ExtResource("4_particles_mesh")
